examples/test/testpolicy8879.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8879
  namespace: namespace205
spec:
  podSelector:
    matchLabels:
      key8: value39
      key10: value31
      key18: value47
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key30: value37
          key28: value33
          key31: value18
      podSelector:
        matchLabels:
          key49: value3
          key2: value11
